--- a/test.html
+++ b/test.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="test.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -17,12 +21,12 @@
     </div>
   </header>
   <section class="about">
-    <div class="about__info">
+    <div class="about__info animate__animated animate__fadeInLeft animate__slow">
       <h1>Солнечные панели GreenRobotic</h1>
       <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-      <button>Узнать подробнее</button>
+      <button>Узнать подробнее <i class="fas fa-angle-right"></i></button>
     </div>
-    <div class="about__images">
+    <div class="about__images animate__animated animate__fadeInRight animate__slow">
       <img class="about__sun-image" src="img/sun.png">
       <img class="about__image" src="img/solar-panel.png">
     </div>
@@ -54,6 +58,7 @@
             <option value="100+">100 000₽</option>
           </select>
         </div>
+        <input placeholder="введите текст">
         <button type="submit" class="form__submit">Отправить заявку</button>
     </div>
     </form>
@@ -68,7 +73,7 @@
         </div>
       </div>
       <div class="footer__group">
-        <h3>Решения дома:</h3>
+        <h3>Решения для дома:</h3>
         <div class="footer__links">
           <a href="#">Солнечные панели GreenRobotic</a>
           <a href="#">Системы солнечных панелей GreenStation</a>
@@ -76,6 +81,7 @@
       </div>
       <div class="footer__group">
         <h3>Компания</h3>
+
         <div class="footer__links">
           <a href="#">Контакты</a>
           <a href="#">Вакансии</a>
@@ -83,6 +89,7 @@
         </div>
       </div>
     </div>
+
     <div class="footer__copyright">
       GreenCorp © 2021
     </div>
