--- a/test.html
+++ b/test.html
@@ -6,9 +6,6 @@
   <link rel="stylesheet" href="test.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
@@ -31,38 +28,133 @@
       <img class="about__image" src="img/solar-panel.png">
     </div>
   </section>
-  <section class="form">
-    <div class="form__container">
-      <h1>Оставьте свои контакты</h1>
-      <p>Поможем подобрать модель. <br> Выбрать удобный вариант доставки и установки. <br> Гарантия возврата денег.</p>
-      <form>
-        <div class="form__group">
-          <label for="name">Ваше имя</label>
-          <input type="text" placeholder="Введите имя" id="name">
+  <div class="features" id="features">
+    <div class="cards">
+      <div class="card">
+        <div class="card__logo">
+          <i class="fa-solid fa-solar-panel"></i>
         </div>
-        <div class="form__group">
-          <label for="email">Электронный адрес</label>
-          <input type="email" placeholder="***@yandex.ru" id="email">
+        <h3>
+          Уменьшите счета за электричество
+        </h3>
+        <p>
+          Используйте чистую солнечную энергию для питания своего дома: уменьшите зависимость от электросети и счета за
+          электричество.
+        </p>
+
+      </div>
+      <div class="card">
+        <div class="card__logo">
+          <span>24/7</span>
         </div>
-        <div class="form__group">
-          <label for="phone">Номер телефона</label>
-          <input type="tel" placeholder=" (999) 999-99-99" id="phone">
+        <h3>
+          Мониторинг электроэнергии
+        </h3>
+        <p>
+          Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения.
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="card__logo">
+          <i class="fa-solid fa-chart-line"></i>
         </div>
-        <div class="form__group">
-          <label for="budget">Примерный бюджет</label>
-          <select id="budget">
-            <option>Выберите вариант</option>
-            <option value="10-30">10 000₽ – 30 000₽</option>
-            <option value="30-60">30 000₽ – 60 000₽</option>
-            <option value="60-100">60 000₽ – 100 000₽</option>
-            <option value="100+">100 000₽</option>
-          </select>
-        </div>
-        <input placeholder="введите текст">
-        <button type="submit" class="form__submit">Отправить заявку</button>
+        <h3>
+          Максимальная эффективность
+        </h3>
+        <p>
+          Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со
+          сложными углами.
+        </p>
+      </div>
     </div>
-    </form>
+    <div class="features_border">
+      <div class="features__feedback">
+        <div class="features__feedback-left">
+          <h2>
+            Нам доверяет
+            <br>
+            5000+ счастливых клиентов
+          </h2>
+          <p>
+            Мы помогли тысячам людей перейти на зеленую энергию.
+            <br>
+            После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании
+          </p>
+        </div>
+        <div class="features__feedback-right">
+          <div class="features__box features__savings-box">
+            <h3>30 млн ₽</h3>
+            <p>Помогаем экономить нашим клиентам ежемесячно</p>
+          </div>
+          <div class="features__box features__rate-box">
+            <h3>4.7</h3>
+            <p class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </p>
+            <p>
+              Средняя оценка наших клиентов
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
+    </section>
+    <section class="promo">
+      <div class="promo__image"></div>
+      <div class="promo__right">
+        <div class="promo__text">
+          <h2>Зарядите свой дом</h2>
+          <p>
+            Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна.
+          </p>
+          <p>
+            Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и
+            накопления энергии.
+          </p>
+          <div class="promo__button-wrap">
+            <button type="button">Заказать <i class="fas fa-chevron-right"></i></button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="form">
+      <div class="form__container">
+        <h1>Оставьте свои контакты</h1>
+        <p>Поможем подобрать модель. <br> Выбрать удобный вариант доставки и установки. <br> Гарантия возврата денег.
+        </p>
+        <form>
+          <div class="form__group">
+            <label for="name">Ваше имя</label>
+            <input type="text" placeholder="Введите имя" id="name">
+          </div>
+          <div class="form__group">
+            <label for="email">Электронный адрес</label>
+            <input type="email" placeholder="***@yandex.ru" id="email">
+          </div>
+          <div class="form__group">
+            <label for="phone">Номер телефона</label>
+            <input type="tel" placeholder=" (999) 999-99-99" id="phone">
+          </div>
+          <div class="form__group">
+            <label for="budget">Примерный бюджет</label>
+            <select id="budget">
+              <option>Выберите вариант</option>
+              <option value="10-30">10 000₽ – 30 000₽</option>
+              <option value="30-60">30 000₽ – 60 000₽</option>
+              <option value="60-100">60 000₽ – 100 000₽</option>
+              <option value="100+">100 000₽</option>
+            </select>
+          </div>
+          <input placeholder="введите текст">
+          <button type="submit" class="form__submit">Отправить заявку</button>
+      </div>
+      </form>
+  </div>
   </section>
   <footer>
     <div class="footer__container">
@@ -94,4 +186,6 @@
       GreenCorp © 2021
     </div>
   </footer>
+
+  <script src="https://kit.fontawesome.com/aa444313e6.js" crossorigin="anonymous"></script>
 </body>
