--- a/test.html
+++ b/test.html
@@ -18,6 +18,8 @@
     </div>
   </header>
   <section class="about">
+    <canvas class="orb-canvas" id="orb-canvas"></canvas>
+
     <div class="about__info animate__animated animate__fadeInLeft animate__slow">
       <h1>Солнечные панели GreenRobotic</h1>
       <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -186,6 +188,6 @@
       GreenCorp © 2021
     </div>
   </footer>
-
+  <script src="js/canvas.js"></script>
   <script src="https://kit.fontawesome.com/aa444313e6.js" crossorigin="anonymous"></script>
 </body>
