--- a/test.html
+++ b/test.html
@@ -13,8 +13,8 @@
   <header>
     <img class="header__logo" src='img/logo.svg'>
     <div class="header__controls">
-      <a href="#contacts">Контакты</a>
-      <button>Заказать</button>
+      <a href="#form">Контакты</a>
+      <button type="button">Заказать</button>
     </div>
   </header>
   <section class="about">
@@ -23,7 +23,7 @@
     <div class="about__info animate__animated animate__fadeInLeft animate__slow">
       <h1>Солнечные панели GreenRobotic</h1>
       <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-      <button>Узнать подробнее <i class="fas fa-angle-right"></i></button>
+      <button class="more-button" href="#features">Узнать подробнее <i class="fas fa-angle-right"></i></button>
     </div>
     <div class="about__images animate__animated animate__fadeInRight animate__slow">
       <img class="about__sun-image" src="img/sun.png">
@@ -76,7 +76,7 @@
           <h2>
             Нам доверяет
             <br>
-            5000+ счастливых клиентов
+            <div class="features__clients-count">5000+</div> счастливых клиентов
           </h2>
           <p>
             Мы помогли тысячам людей перейти на зеленую энергию.
@@ -124,7 +124,7 @@
         </div>
       </div>
     </section>
-    <section class="form">
+    <section class="form" id="form">
       <div class="form__container">
         <h1>Оставьте свои контакты</h1>
         <p>Поможем подобрать модель. <br> Выбрать удобный вариант доставки и установки. <br> Гарантия возврата денег.
@@ -149,10 +149,11 @@
               <option value="10-30">10 000₽ – 30 000₽</option>
               <option value="30-60">30 000₽ – 60 000₽</option>
               <option value="60-100">60 000₽ – 100 000₽</option>
-              <option value="100+">100 000₽</option>
+              <option value="other">
+                Другое
+              </option>
             </select>
           </div>
-          <input placeholder="введите текст">
           <button type="submit" class="form__submit">Отправить заявку</button>
       </div>
       </form>
@@ -189,5 +190,6 @@
     </div>
   </footer>
   <script src="js/canvas.js"></script>
+  <script src="js/animations.js"></script>
   <script src="https://kit.fontawesome.com/aa444313e6.js" crossorigin="anonymous"></script>
 </body>
